fixed spacing on hamburger menu and close button

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -26,20 +26,21 @@ header {
       width: 1.8rem;
       height: 2px;
       margin: none;
-      margin-bottom: 5px;
+      margin-bottom: 0.5rem;
       background: @font-color;
+      transform: translate(0rem, -0.5rem);
     }
   }
   .menu-btn.close {
     .btn-line {
       &:nth-child(1) {
-        transform: rotate(45deg) translate(0rem, 0rem);
+        transform: rotate(45deg) translate(0.1rem, 0rem);
       }
       &:nth-child(2) {
         display: none;
       }
       &:nth-child(3) {
-        transform: rotate(-45deg) translate(0.3rem, -6px);
+        transform: rotate(-45deg) translate(0.4rem, -6px);
       }
     }
   }
